--- a/.gitgub/workflows/main.yml
+++ b/.gitgub/workflows/main.yml
@@ -2,6 +2,7 @@ on:
   push:
     branches:
       - main
+      - master
 name: 🚀 Deploy website on push
 jobs:
   web-deploy:
@@ -17,4 +18,4 @@ jobs:
           server: ftp.justink40.sg-host.com
           username: ${{ secrets.ftp_login }}
           password: ${{ secrets.ftp_password }}
-          server-dir: /justink40.sg-host.com/public_html/wp-content/themes/garageflooringllc/
+          server-dir: justink40.sg-host.com/public_html/wp-content/themes/garageflooringllc/
