--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - name: 📂 Sync files
         uses: SamKirkland/FTP-Deploy-Action@4.2.0
         with:
-          server: ftp.justink40.sg-host.com
+          server: ftp.garageflooringllc.com
           username: ${{ secrets.ftp_login }}
           password: ${{ secrets.ftp_password }}
-          server-dir: justink40.sg-host.com/public_html/wp-content/themes/garageflooringllc/
+          server-dir: garageflooringllc.com/public_html/wp-content/themes/garageflooringllc/
